# hydroguide-site

./: .gitignore  .prettierignore  CASE_STUDY.md  Dockerfile  LICENSE  README.md  Solar_calculator.xlsx  docker-compose.yml  hydroguide-site.code-workspace  logic.txt  reference-config.json  run.sh
.claude/: settings.local.json
backend/: pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/middleware/: auth.py  session.py
backend/app/models/: schemas.py
backend/app/routers/: analyze.py  config_router.py
backend/app/services/: analysis_service.py  energy_balance.py  excel_parser.py
backend/tests/: README.md  conftest.py  test_api.py  test_calculations.py  test_cross_validation.py  test_energy_balance.py  test_excel_parser.py  test_live_api.py
frontend/: index.html  package-lock.json  package.json  radio-link-tool.html  vite.config.ts
frontend/lighthouse-reports/: analyse.report.html  analyse.report.json  api-docs.report.html  api-docs.report.json  dokumentasjon.report.html  dokumentasjon.report.json  effektbudsjett.report.html  effektbudsjett.report.json  landing.report.html  landing.report.json  oversikt.report.html  oversikt.report.json  parametere.report.html  parametere.report.json  siktlinje.report.html  siktlinje.report.json  summary.txt  system.report.html  system.report.json
frontend/public/: robots.txt
frontend/src/: App.tsx  index.css  mathml.d.ts
frontend/src/hooks/: useReferenceData.ts
frontend/src/lib/: calculations.ts  months.ts  recommendations.ts
frontend/src/pages/: AnalysePage.tsx  ApiDocsPage.tsx  DashboardPage.tsx  (+6 more)
(+18 files in other folders)
